@@ -1,3 +1,8 @@
+Tue Jul 13 14:52:59 UTC 2010  Marijke Hengstmengel <mhengstmengel@remedy.nl>
+
+        * connectors/ami4ccm/tests/GetComp/Sender/GetComp_Sender_exec.cpp
+        Small changes in test criteria.
+
 Tue Jul 13 10:30:59 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>
 
         * tools/IDL3_to_XMI/be_util.cpp:
